# booking_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
apps/api/app/: main.py
apps/api/app/agent/: orchestrator.py  prompts.py  tools.py
apps/api/app/api/: router.py
apps/api/app/channels/: base.py  beds24.py  beds24_v2.py  errors.py
apps/api/app/core/: config.py  observability.py
apps/api/app/db/: base.py  session.py
apps/api/app/domain/: pricing.py  suggestion.py
apps/api/app/llm/: client.py
apps/api/app/market/: extractor.py  reference.py
apps/api/app/models/: __init__.py  agent.py  audit.py  availability.py  booking.py  calendar.py  enums.py  intelligence.py  market.py  mixins.py  pricing.py  property.py  sync.py
apps/api/app/schemas/: pricing.py  (+1 more)
apps/api/migrations/: env.py
apps/api/scripts/: backup_db.py  scan_daily.py  seed_dev.py  seed_e2e.py  start.sh  sync_daily.py
apps/api/tests/: conftest.py  test_agent.py  test_agent_orchestrator.py  test_agent_promotions.py  test_audit.py  test_availability_service.py  test_beds24_adapter.py  test_beds24_v2_adapter.py  test_beds24_v2_promotions.py  test_db_url_ssl.py  test_health.py  test_intelligence_service.py  test_models.py  test_observability.py  test_offer_promotion_service.py  test_pricing.py  test_pricing_app.py  test_promotion_service.py  test_request_logging.py  test_status.py  test_suggestion_engine.py  test_suggestions.py  test_sync_service.py
(+180 files in other folders)
